force-app/main/default/objects/Account/fields/INReflectionTime__c.field-meta.xml
<CustomField>
    <fullName>INReflectionTime__c</fullName>
    <label>[システム]反映時間</label>
    <type>DateTime</type>
</CustomField>