force-app/main/default/objects/Account/fields/memo1__c.field-meta.xml
<CustomField>
    <fullName>memo1__c</fullName>
    <label>緊急連絡先1メモ</label>
    <type>TextArea</type>
</CustomField>