force-app/main/default/objects/Account/fields/memo2__c.field-meta.xml
<CustomField>
    <fullName>memo2__c</fullName>
    <label>緊急連絡先2メモ</label>
    <type>TextArea</type>
</CustomField>