force-app/main/default/objects/Account/fields/memo3__c.field-meta.xml
<CustomField>
    <fullName>memo3__c</fullName>
    <label>緊急連絡先3メモ</label>
    <type>TextArea</type>
</CustomField>