force-app/main/default/objects/Account/fields/Name2__c.field-meta.xml
<CustomField>
    <fullName>Name2__c</fullName>
    <label>保護者名２</label>
    <length>20</length>
    <type>Text</type>
</CustomField>