force-app/main/default/objects/Account/fields/PtaOfficer__c.field-meta.xml
<CustomField>
    <fullName>PtaOfficer__c</fullName>
    <label>保護者会役員</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>会長</fullName>
            </value>
            <value>
                <fullName>副会長</fullName>
            </value>
            <value>
                <fullName>理事</fullName>
            </value>
            <value>
                <fullName>会計</fullName>
            </value>
            <value>
                <fullName>書紀</fullName>
            </value>
            <value>
                <fullName>役員</fullName>
            </value>
            <value>
                <fullName>クラス代表</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>