force-app/main/default/objects/Account/fields/RelationshipWithChildren1__c.field-meta.xml
<CustomField>
    <fullName>RelationshipWithChildren1__c</fullName>
    <label>保護者１：子との関係</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RelationshipWithChildren</valueSetName>
    </valueSet>
</CustomField>