force-app/main/default/objects/Account/fields/RelationshipWithChildren2__c.field-meta.xml
<CustomField>
    <fullName>RelationshipWithChildren2__c</fullName>
    <label>保護者２：子との関係</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RelationshipWithChildren</valueSetName>
    </valueSet>
</CustomField>