force-app/main/default/objects/Account/fields/tel1__c.field-meta.xml
<CustomField>
    <fullName>tel1__c</fullName>
    <label>緊急連絡先1</label>
    <type>Phone</type>
</CustomField>