force-app/main/default/objects/Account/fields/tel2__c.field-meta.xml
<CustomField>
    <fullName>tel2__c</fullName>
    <label>緊急連絡先2</label>
    <type>Phone</type>
</CustomField>