force-app/main/default/objects/Account/fields/tel3__c.field-meta.xml
<CustomField>
    <fullName>tel3__c</fullName>
    <label>緊急連絡先3</label>
    <type>Phone</type>
</CustomField>